hphp/test/slow/coeffects/parse-this-1.php.expectf
Fatal error: this:: context is not allowed on top level functions in %s on line 3
